Put google test targets in a google-test folder

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,8 +3,10 @@ add_library(boilerplate
 	private_header.hpp
 )
 
-target_add_include_directories(
+target_include_directories(
 	boilerplate
 	PUBLIC
 	../includes
+	PRIVATE
+	.
 )
