--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #This is required to use the folders in Visual Studio
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-add_subdirectory(source)
+add_subdirectory(sources)
 
 option(BP_BUILD_TESTS "Build tests" ON)
 if(BP_BUILD_TESTS)
