Add a library as an example and use it
Library my_math is added as an example
Visual Studio startup project is added

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,15 +1,19 @@
 set(SOURCES
 	code/main.cpp
-	code/private_header.hpp
 )
 
-add_executable(boilerplate
+add_executable(hello_world
 	${SOURCES}
 )
 
-target_include_directories(boilerplate
+target_include_directories(hello_world
 	PUBLIC
 	../includes
 	PRIVATE
 	code
+)
+
+target_link_libraries(hello_world
+	PUBLIC
+	my_maths
 )
