--- a/libraries/my_maths/sources/CMakeLists.txt
+++ b/libraries/my_maths/sources/CMakeLists.txt
@@ -1,10 +1,14 @@
+set(INCLUDES
+	../includes/my_maths/my_maths.hpp
+)
+
 set(SOURCES
 	my_maths.cpp
-	../includes/my_maths/my_maths.hpp
 )
 
 add_library(my_maths
 	${SOURCES}
+	${INCLUDES}
 )
 
 target_include_directories(my_maths
@@ -12,5 +16,7 @@ target_include_directories(my_maths
 	../includes
 	PRIVATE
 	../includes/my_maths
-
 )
+
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
+source_group(includes FILES ${INCLUDES})
