Place the code inside a folder with the project's name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(cpp_hello_world LANGUAGES CXX)
+project(cpp_boilerplate LANGUAGES CXX)
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 17)
@@ -16,8 +16,8 @@ if(BP_BUILD_TESTS)
 endif()
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT hello_world)
-set_target_properties(hello_world PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY $(OutDir))
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT cpp_boilerplate)
+set_target_properties(cpp_boilerplate PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY $(OutDir))
 
 
 set_target_properties(my_maths PROPERTIES FOLDER libraries)
