--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,17 +19,8 @@ if(USE_UNIT_TESTS)
     add_subdirectory(tests/unit_tests)
 endif()
 
-#For some reason, Cppcheck uses relative paths to detect when to ignore stuff from buildcommands.json, but absolute paths when parsing VS projects.
-if(CMAKE_GENERATOR MATCHES "Visual Studio")
-    set(GOOGLETEST_IGNORE_DIR "-i${CMAKE_BINARY_DIR}/_deps")
-else()
-    set(GOOGLETEST_IGNORE_DIR "-i_deps")
-endif()
-
-message("GOOGLETEST_IGNORE_DIR: ${GOOGLETEST_IGNORE_DIR}" )
-
 include(cppcheck REQUIRED)
-target_add_cppcheck(TARGET cpp_boilerplate NUMBER_OF_THREADS 4 SUPPRESSIONS "missingIncludeSystem" EXTRA_COMMANDS "--template=gcc" "--verbose" "--inline-suppr" "--inconclusive" "--check-level=exhaustive" "--enable=all" "--inconclusive" "--force" ${GOOGLETEST_IGNORE_DIR} "--checkers-report=cppcheck-report.txt")
+target_add_cppcheck(TARGET cpp_boilerplate NUMBER_OF_THREADS 4 SUPPRESSIONS "missingIncludeSystem" EXTRA_COMMANDS "--template=gcc" "--verbose" "--inline-suppr" "--inconclusive" "--check-level=exhaustive" "--enable=all" "--inconclusive" "--force" --file-filter=*sources/code* "--checkers-report=${CMAKE_SOURCE_DIR}/tests/cppcheck/cppcheck-report.txt")
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT cpp_boilerplate)
